// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.Float for Resource.Form Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field has-numberinput has-numberinput-compact"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="b-numberinput field has-addons is-expanded"
    >
      <p
        class="control"
      >
        <button
          class="button is-primary"
          type="button"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-minus fa-lg"
            />
          </span>
        </button>
      </p>
       
      <div
        class="control is-expanded is-clearfix"
      >
        <input
          autocomplete="on"
          class="input"
          step="0.01"
          type="number"
        />
         
        <!---->
         
        <!---->
         
        <!---->
      </div>
       
      <p
        class="control"
      >
        <button
          class="button is-primary"
          type="button"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-plus fa-lg"
            />
          </span>
        </button>
      </p>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.Form With value, label, icon and placeholder 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field has-numberinput has-numberinput-compact"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="b-numberinput field has-addons is-expanded"
    >
      <p
        class="control"
      >
        <button
          class="button is-primary"
          type="button"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-minus fa-lg"
            />
          </span>
        </button>
      </p>
       
      <div
        class="control has-icons-left is-expanded is-clearfix"
      >
        <input
          autocomplete="on"
          class="input"
          max="20"
          min="5"
          placeholder="An explicit placeholder"
          step="0.01"
          type="number"
        />
         
        <span
          class="icon is-left"
        >
          <i
            class="fa fa-user fa-lg"
          />
        </span>
         
        <!---->
         
        <!---->
      </div>
       
      <p
        class="control"
      >
        <button
          class="button is-primary"
          type="button"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-plus fa-lg"
            />
          </span>
        </button>
      </p>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.Form With value, label, readonly 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div>
      <span>
        15.12
      </span>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.Form With value, label, readonly and slot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div>
      <div>
        15.123 
        <br />
         15.12
      </div>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.List Empty 1`] = `
<div>
  <span>
    
  </span>
</div>
`;

exports[`Field.Float for Resource.List With value 1`] = `
<div>
  <span>
    10.10
  </span>
</div>
`;

exports[`Field.Float for Resource.List With value and slot 1`] = `
<div>
  <div>
    10.1 
    <br />
     10.10
  </div>
</div>
`;

exports[`Field.Float for Resource.Thumbnail Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.Thumbnail Empty 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.Thumbnail With value 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      10.10
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.Thumbnail With value 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      10.10
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Float for Resource.Thumbnail With value and slot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div>
      10.1 
      <br />
       10.10
    </div>
     
    <!---->
  </div>
</span>
`;
